k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: express-k8s
spec:
    replicas: 3
    selector:
        matchLabels:
            app: express-k8s
    template:
        metadata:
            labels:
                app: express-k8s
        spec:
            containers:
                - name: express-k8s
                  imagePullPolicy: Never
                  image: express-k8s
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "500m"
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: express-k8s
spec:
    selector:
        app: express-k8s
    ports:
        - port: 3000
          targetPort: 3000
