k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: express-k8s
spec:
    selector:
        app: express-k8s
    ports:
        - port: 3000
          targetPort: 3000
